<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/phone_confirmation_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="12dp"
    tools:context=".activities.PhoneConfirmation">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_above="@id/code_layout"
        android:layout_marginBottom="15dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/greyTitle"
                android:text="@string/please_check_your_phone"
                android:fontFamily="@font/roboto_regular"
                android:textSize="15sp"/>
            <TextView
                android:id="@+id/phone_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/greyTitle"
                android:fontFamily="@font/roboto_regular"
                android:textStyle="bold"
                android:textSize="15sp"/>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_text_phone"
            android:textColor="@color/greyTitle"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center"
            android:textSize="15sp"/>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/code_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/phone_edit_border"
        android:layout_centerInParent="true">
        <EditText
            android:id="@+id/sms_code_edit"
            android:layout_width="250dp"
            android:layout_height="48dp"
            android:background="@color/white"
            android:hint="@string/sms_code"
            android:textColor="@color/greyTitle"
            android:fontFamily="@font/roboto_regular"
            android:layout_marginStart="10dp"
            android:textSize="17sp"
            android:inputType="number"/>
    </LinearLayout>
    <Button
        android:id="@+id/login_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:background="@drawable/button_continue_style"
        android:textColor="@color/white"
        android:layout_below="@id/code_layout"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/roboto_medium"
        android:layout_centerHorizontal="true"/>
    <LinearLayout
        android:id="@+id/resend_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/login_button"
        android:layout_marginTop="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/didn_t_receive_code"
            android:fontFamily="@font/roboto_regular"
            android:textSize="15sp"/>
        <TextView
            android:id="@+id/resend_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resend"
            android:fontFamily="@font/roboto_regular"
            android:textColor="@color/colorAccent"
            android:textSize="15sp"/>
    </LinearLayout>
    <ProgressBar
        android:id="@+id/confirmation_progress"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_below="@id/resend_layout"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"
        />

</RelativeLayout>