<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:rsb="http://schemas.android.com/apk/res-auto"
    android:background="#fafafa"
    android:scrollbarThumbVertical="@null"
    tools:context=".activities.SettingActivity">
    <LinearLayout
        android:id="@+id/setting_main_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="vertical">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardUseCompatPadding="true">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/show_me_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/show_me_text"
                    android:fontFamily="@font/roboto_regular"
                    android:textSize="17sp"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    android:textColor="@color/colorAccent"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/show_me_text"
                    android:layout_marginStart="15dp"
                    android:text="@string/men_text"
                    android:fontFamily="@font/roboto_regular"
                    android:textSize="16sp"
                    android:textColor="@color/greyTitle"
                    android:layout_marginTop="10dp"/>
                <Switch
                    android:id="@+id/men_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/show_me_text"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="10dp"
                    android:layout_marginTop="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_below="@id/men_switch"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="15dp"
                    android:text="@string/women_text"
                    android:fontFamily="@font/roboto_regular"
                    android:textColor="@color/greyTitle"
                    android:textSize="16sp"/>
                <Switch
                    android:id="@+id/women_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/men_switch"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="10dp"
                    android:layout_marginTop="10dp"/>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardUseCompatPadding="true">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="70dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:text="@string/show_my_age"
                    android:fontFamily="@font/roboto_regular"
                    android:textSize="16sp"
                    android:textColor="@color/greyTitle"
                    android:layout_centerVertical="true" />
                <Switch
                    android:id="@+id/show_age_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="10dp"
                    android:layout_centerVertical="true"/>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardUseCompatPadding="true">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/max_distance_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/maximum_distance"
                    android:fontFamily="@font/roboto_regular"
                    android:textSize="17sp"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    android:textColor="@color/colorAccent"
                    />
                <SeekBar
                    android:id="@+id/max_distance_seek_bar"
                    android:layout_width="300dp"
                    android:layout_height="50dp"
                    android:layout_below="@id/max_distance_text"
                    android:layout_marginTop="10dp"
                    android:layout_centerHorizontal="true"
                    android:max="160"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/distance_text"
                    android:fontFamily="@font/roboto_medium"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="10dp"
                    android:textSize="15sp"
                    android:layout_marginEnd="15dp"/>

            </RelativeLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardUseCompatPadding="true">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="100dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/age_range_text"
                    android:fontFamily="@font/roboto_regular"
                    android:textSize="17sp"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    android:textColor="@color/colorAccent"/>
                <LinearLayout
                    android:id="@+id/age_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp">
                    <TextView
                        android:id="@+id/min_age"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="15sp"
                        android:fontFamily="@font/roboto_medium"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mark"
                        android:layout_marginStart="5dp"
                        android:textSize="15sp"/>
                    <TextView
                        android:id="@+id/max_age"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="15sp"
                        android:fontFamily="@font/roboto_medium"
                        android:layout_marginStart="5dp"/>
                </LinearLayout>
                <com.yahoo.mobile.client.android.util.rangeseekbar.RangeSeekBar
                    android:id="@+id/setting_seekbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/age_layout"
                    rsb:absoluteMaxValue="18"
                    rsb:absoluteMinValue="80"/>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardUseCompatPadding="true">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/share_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/share_text"
                    android:textSize="16sp"
                    android:textColor="@drawable/text_color"
                    android:layout_marginTop="15dp"
                    android:layout_marginStart="15dp"
                    android:paddingBottom="15dp"
                    android:fontFamily="@font/roboto_regular"/>
                <TextView
                    android:id="@+id/ads_settings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ads_settings"
                    android:textSize="16sp"
                    android:textColor="@drawable/text_color"
                    android:layout_marginStart="15sp"
                    android:paddingBottom="15dp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardUseCompatPadding="true">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/licenses_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/licenses_text"
                    android:textSize="16sp"
                    android:textColor="@drawable/text_color"
                    android:layout_marginTop="15dp"
                    android:layout_marginStart="15dp"
                    android:fontFamily="@font/roboto_regular"/>
                <TextView
                    android:id="@+id/privacy_policy_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/privacy_policy_text"
                    android:textColor="@drawable/text_color"
                    android:textSize="16sp"
                    android:layout_marginTop="15dp"
                    android:layout_marginStart="15dp"
                    android:fontFamily="@font/roboto_regular"/>
                <TextView
                    android:id="@+id/terms_text"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:text="@string/terms_of_service_text"
                    android:textColor="@drawable/text_color"
                    android:textSize="16sp"
                    android:layout_marginTop="15dp"
                    android:layout_marginStart="15dp"
                    android:fontFamily="@font/roboto_regular"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:cardUseCompatPadding="true">
            <Button
                android:id="@+id/logOut"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/sign_out_text"
                android:background="@drawable/button_click_color"
                android:textColor="#616161"
                android:fontFamily="@font/roboto_medium"
                />
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            app:cardUseCompatPadding="true">
            <Button
                android:id="@+id/delete"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/delete_account"
                android:background="@drawable/button_click_color"
                android:textColor="@color/colorAccent"
                android:fontFamily="@font/roboto_medium"
                />
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</ScrollView>