<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout_personal_data"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activities.DataFacebookActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:focusable="true"
        android:focusableInTouchMode="true">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/phone_edit_border"
            android:layout_marginTop="20dp"
            >
            <TextView
                android:id="@+id/birthday_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:text="@string/birthday"
                android:fontFamily="@font/roboto_regular"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:textSize="17sp"
                android:textColor="@android:color/darker_gray"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">
            <TextView
                android:id="@+id/show_me_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender"
                android:fontFamily="@font/roboto_medium"
                android:textSize="17sp"
                android:textColor="@color/colorAccent"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/show_me_text"
                android:layout_marginStart="15dp"
                android:text="@string/male"
                android:fontFamily="@font/roboto_regular"
                android:textSize="16sp"
                android:layout_marginTop="10dp"/>
            <Switch
                android:id="@+id/male_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/show_me_text"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_below="@id/male_switch"
                android:layout_marginTop="10dp"
                android:layout_marginStart="15dp"
                android:text="@string/female"
                android:fontFamily="@font/roboto_regular"
                android:textSize="16sp"/>
            <Switch
                android:id="@+id/female_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/male_switch"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"/>
        </RelativeLayout>
    </LinearLayout>
    <ProgressBar
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:id="@+id/progress"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/save_button"
        android:layout_marginBottom="60dp"
        android:visibility="invisible"/>
    <Button
        android:id="@+id/save_button"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_continue_style"
        android:text="@string/save"
        android:fontFamily="@font/roboto_medium"
        android:textColor="@color/white"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        />
</RelativeLayout>