<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".activities.MatchActivity">
    <TextView
        android:id="@+id/matched_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/matched_text"
        android:textColor="@color/colorAccent"
        android:textSize="30sp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/roboto_bold"
        android:background="@color/white"
        android:layout_centerHorizontal="true"
        />
    <TextView
        android:id="@+id/matched_text_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        android:textSize="17sp"
        android:gravity="center"
        android:background="@color/white"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/roboto_medium"
        android:layout_below="@id/matched_text"
        android:layout_centerHorizontal="true"/>
    <RelativeLayout
        android:id="@+id/first_frame_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_below="@id/matched_text_details"
        android:layout_marginTop="85dp"
        android:background="@drawable/circle"
        android:layout_marginStart="16dp">
        <ImageView
            android:id="@+id/first_image"
            android:layout_width="145dp"
            android:layout_height="145dp"
            android:layout_centerInParent="true"
            android:background="@color/white"
            android:contentDescription="@null" />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/second_frame_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_below="@id/matched_text_details"
        android:layout_marginTop="85dp"
        android:background="@drawable/circle"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="16dp">
        <ImageView
            android:id="@+id/second_image"
            android:layout_width="145dp"
            android:layout_height="145dp"
            android:layout_centerInParent="true"
            android:background="@color/white"
            android:contentDescription="@null" />
    </RelativeLayout>
    <Button
        android:id="@+id/send_message_button"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:background="@drawable/button_match_style"
        android:layout_above="@id/keep_searching_button"
        android:layout_marginBottom="15dp"
        android:layout_centerHorizontal="true"
        android:text="@string/send_message"
        android:textSize="15sp"
        android:fontFamily="@font/roboto_medium"
        android:textColor="@color/white"/>
    <Button
        android:id="@+id/keep_searching_button"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:background="@drawable/button_match_style"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/keep_searching"
        android:textSize="15sp"
        android:layout_marginBottom="15dp"
        android:fontFamily="@font/roboto_medium"
        android:textColor="@color/white"/>
</RelativeLayout>